<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorExtraLightGrey"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/label_personalize"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/button_personalize_with_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/action_personalize_with_qr"
            android:padding="8dp"
            android:layout_marginRight="12dp"/>

        <TextView
            android:id="@+id/button_personalize_with_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:padding="8dp"
            android:text="@string/action_personalize_with_alias"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGrey"/>

    <Button
        android:id="@+id/button_authenticate"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:textColor="@color/colorWhile"
        android:text="@string/action_authenticate"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"
        android:enabled="false"/>

    <TextView
        android:id="@+id/text_view_logs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@drawable/background_logs_view"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:text="@string/label_log_placeholder"
        android:scrollbars="vertical"/>

</LinearLayout>