<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/title_alias_and_activation_code"
        android:textSize="14sp"
        android:textColor="@color/colorWhile"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="100dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edittext_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:hint="@string/hint_alias"
            android:backgroundTint="@color/colorLightGrey"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/edittext_activation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_activation_code"
            android:backgroundTint="@color/colorLightGrey"
            android:textSize="16sp"
            tools:ignore="Autofill,LabelFor" />

    </LinearLayout>

</LinearLayout>